reference/5.1/Microsoft.PowerShell.Core/About/about_Type_Accelerators.md
---
description: Beschrijft de beschik bare typen Accelerators voor .NET Framework-klassen
keywords: powershell,cmdlet
Locale: en-US
ms.date: 05/01/2020
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.core/about/about_type_accelerators?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: about_Type_Accelerators
ms.openlocfilehash: 21093f3a649212526c3fc3eb5405e2a7ce6e49f3
ms.sourcegitcommit: f874dc1d4236e06a3df195d179f59e0a7d9f8436
ms.translationtype: MT
ms.contentlocale: nl-NL
ms.lasthandoff: 10/13/2020
ms.locfileid: "93252545"
---
# <a name="about-type-accelerators"></a><span data-ttu-id="1584c-104">Over type Accelerators</span><span class="sxs-lookup"><span data-stu-id="1584c-104">About Type Accelerators</span></span>

## <a name="short-desription"></a><span data-ttu-id="1584c-105">KORTE BESCHRIJVING</span><span class="sxs-lookup"><span data-stu-id="1584c-105">SHORT DESRIPTION</span></span>
<span data-ttu-id="1584c-106">Beschrijft de beschik bare typen Accelerators voor .NET Framework-klassen</span><span class="sxs-lookup"><span data-stu-id="1584c-106">Describes the Type accelerators available for .NET framework classes</span></span>

## <a name="long-description"></a><span data-ttu-id="1584c-107">LANGE BESCHRIJVING</span><span class="sxs-lookup"><span data-stu-id="1584c-107">LONG DESCRIPTION</span></span>

<span data-ttu-id="1584c-108">Type Accelerators zijn aliassen voor .NET Framework-klassen.</span><span class="sxs-lookup"><span data-stu-id="1584c-108">Type accelerators are aliases for .NET framework classes.</span></span> <span data-ttu-id="1584c-109">Hiermee krijgt u toegang tot specifieke .NET Framework-klassen zonder expliciet de volledige naam van de klasse te hoeven typen.</span><span class="sxs-lookup"><span data-stu-id="1584c-109">They allow you to access specific .NET framework classes without having to explicitly type the entire class name.</span></span> <span data-ttu-id="1584c-110">U kunt bijvoorbeeld de **AliasAttribute** -klasse verkorten van `[System.Management.Automation.AliasAttribute]` tot `[Alias]` .</span><span class="sxs-lookup"><span data-stu-id="1584c-110">For example, you can shorten the **AliasAttribute** class from `[System.Management.Automation.AliasAttribute]` to `[Alias]`.</span></span>

> [!NOTE]
> <span data-ttu-id="1584c-111">Alle type Accelerators moeten nog steeds worden ingepakt in vier Kante haken ( `[]` ).</span><span class="sxs-lookup"><span data-stu-id="1584c-111">All type accelerators still need to be wrapped in square brackets(`[]`).</span></span>

## <a name="available-type-accelerators"></a><span data-ttu-id="1584c-112">Beschik bare type Accelerators</span><span class="sxs-lookup"><span data-stu-id="1584c-112">Available Type Accelerators</span></span>

|        <span data-ttu-id="1584c-113">Accelerator</span><span class="sxs-lookup"><span data-stu-id="1584c-113">Accelerator</span></span>          |                           <span data-ttu-id="1584c-114">Volledige klassen naam</span><span class="sxs-lookup"><span data-stu-id="1584c-114">Full Class Name</span></span>                           |
|---------------------------- | ------------------------------------------------------------------- |
|<span data-ttu-id="1584c-115">WMI</span><span class="sxs-lookup"><span data-stu-id="1584c-115">adsi</span></span>                         | <span data-ttu-id="1584c-116">System. Directory Services. directory entry</span><span class="sxs-lookup"><span data-stu-id="1584c-116">System.DirectoryServices.DirectoryEntry</span></span>                             |
|<span data-ttu-id="1584c-117">adsisearcher</span><span class="sxs-lookup"><span data-stu-id="1584c-117">adsisearcher</span></span>                 | <span data-ttu-id="1584c-118">System. Directory Services. DirectorySearcher</span><span class="sxs-lookup"><span data-stu-id="1584c-118">System.DirectoryServices.DirectorySearcher</span></span>                          |
|<span data-ttu-id="1584c-119">Alias</span><span class="sxs-lookup"><span data-stu-id="1584c-119">Alias</span></span>                        | <span data-ttu-id="1584c-120">System. Management. Automation. AliasAttribute</span><span class="sxs-lookup"><span data-stu-id="1584c-120">System.Management.Automation.AliasAttribute</span></span>                         |
|<span data-ttu-id="1584c-121">AllowEmptyCollection</span><span class="sxs-lookup"><span data-stu-id="1584c-121">AllowEmptyCollection</span></span>         | <span data-ttu-id="1584c-122">System. Management. Automation. AllowEmptyCollectionAttribute</span><span class="sxs-lookup"><span data-stu-id="1584c-122">System.Management.Automation.AllowEmptyCollectionAttribute</span></span>          |
|<span data-ttu-id="1584c-123">AllowEmptyString</span><span class="sxs-lookup"><span data-stu-id="1584c-123">AllowEmptyString</span></span>             | <span data-ttu-id="1584c-124">System. Management. Automation. AllowEmptyStringAttribute</span><span class="sxs-lookup"><span data-stu-id="1584c-124">System.Management.Automation.AllowEmptyStringAttribute</span></span>              |
|<span data-ttu-id="1584c-125">AllowNull</span><span class="sxs-lookup"><span data-stu-id="1584c-125">AllowNull</span></span>                    | <span data-ttu-id="1584c-126">System. Management. Automation. AllowNullAttribute</span><span class="sxs-lookup"><span data-stu-id="1584c-126">System.Management.Automation.AllowNullAttribute</span></span>                     |
|<span data-ttu-id="1584c-127">ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="1584c-127">ArgumentCompleter</span></span>            | <span data-ttu-id="1584c-128">System. Management. Automation. ArgumentCompleterAttribute</span><span class="sxs-lookup"><span data-stu-id="1584c-128">System.Management.Automation.ArgumentCompleterAttribute</span></span>             |
|<span data-ttu-id="1584c-129">matrix</span><span class="sxs-lookup"><span data-stu-id="1584c-129">array</span></span>                        | <span data-ttu-id="1584c-130">System. matrix</span><span class="sxs-lookup"><span data-stu-id="1584c-130">System.Array</span></span>                                                        |
|<span data-ttu-id="1584c-131">bigint</span><span class="sxs-lookup"><span data-stu-id="1584c-131">bigint</span></span>                       | <span data-ttu-id="1584c-132">Systeem. numerics. BigInteger</span><span class="sxs-lookup"><span data-stu-id="1584c-132">System.Numerics.BigInteger</span></span>                                          |
|<span data-ttu-id="1584c-133">booleaans</span><span class="sxs-lookup"><span data-stu-id="1584c-133">bool</span></span>                         | <span data-ttu-id="1584c-134">System. Boolean</span><span class="sxs-lookup"><span data-stu-id="1584c-134">System.Boolean</span></span>                                                      |
|<span data-ttu-id="1584c-135">DBCS</span><span class="sxs-lookup"><span data-stu-id="1584c-135">byte</span></span>                         | <span data-ttu-id="1584c-136">System. byte</span><span class="sxs-lookup"><span data-stu-id="1584c-136">System.Byte</span></span>                                                         |
|<span data-ttu-id="1584c-137">char</span><span class="sxs-lookup"><span data-stu-id="1584c-137">char</span></span>                         | <span data-ttu-id="1584c-138">System. char</span><span class="sxs-lookup"><span data-stu-id="1584c-138">System.Char</span></span>                                                         |
|<span data-ttu-id="1584c-139">cimclass</span><span class="sxs-lookup"><span data-stu-id="1584c-139">cimclass</span></span>                     | <span data-ttu-id="1584c-140">Micro soft. Management. Infrastructure. CimClass</span><span class="sxs-lookup"><span data-stu-id="1584c-140">Microsoft.Management.Infrastructure.CimClass</span></span>                        |
|<span data-ttu-id="1584c-141">cimconverter</span><span class="sxs-lookup"><span data-stu-id="1584c-141">cimconverter</span></span>                 | <span data-ttu-id="1584c-142">Micro soft. Management. Infrastructure. CimConverter</span><span class="sxs-lookup"><span data-stu-id="1584c-142">Microsoft.Management.Infrastructure.CimConverter</span></span>                    |
|<span data-ttu-id="1584c-143">ciminstance</span><span class="sxs-lookup"><span data-stu-id="1584c-143">ciminstance</span></span>                  | <span data-ttu-id="1584c-144">Micro soft. Management. Infrastructure. CimInstance</span><span class="sxs-lookup"><span data-stu-id="1584c-144">Microsoft.Management.Infrastructure.CimInstance</span></span>                     |
|<span data-ttu-id="1584c-145">CimSession</span><span class="sxs-lookup"><span data-stu-id="1584c-145">CimSession</span></span>                   | <span data-ttu-id="1584c-146">Micro soft. Management. Infrastructure. CimSession</span><span class="sxs-lookup"><span data-stu-id="1584c-146">Microsoft.Management.Infrastructure.CimSession</span></span>                      |
|<span data-ttu-id="1584c-147">cimtype</span><span class="sxs-lookup"><span data-stu-id="1584c-147">cimtype</span></span>                      | <span data-ttu-id="1584c-148">Micro soft. Management. Infrastructure. CimType</span><span class="sxs-lookup"><span data-stu-id="1584c-148">Microsoft.Management.Infrastructure.CimType</span></span>                         |
|<span data-ttu-id="1584c-149">CmdletBinding</span><span class="sxs-lookup"><span data-stu-id="1584c-149">CmdletBinding</span></span>                | <span data-ttu-id="1584c-150">System. Management. Automation. CmdletBindingAttribute</span><span class="sxs-lookup"><span data-stu-id="1584c-150">System.Management.Automation.CmdletBindingAttribute</span></span>                 |
|<span data-ttu-id="1584c-151">variabele</span><span class="sxs-lookup"><span data-stu-id="1584c-151">cultureinfo</span></span>                  | <span data-ttu-id="1584c-152">System. Globalization. Culture info</span><span class="sxs-lookup"><span data-stu-id="1584c-152">System.Globalization.CultureInfo</span></span>                                    |
|<span data-ttu-id="1584c-153">datum/tijd</span><span class="sxs-lookup"><span data-stu-id="1584c-153">datetime</span></span>                     | <span data-ttu-id="1584c-154">System. DateTime</span><span class="sxs-lookup"><span data-stu-id="1584c-154">System.DateTime</span></span>                                                     |
|<span data-ttu-id="1584c-155">decimal</span><span class="sxs-lookup"><span data-stu-id="1584c-155">decimal</span></span>                      | <span data-ttu-id="1584c-156">Systeem. decimaal</span><span class="sxs-lookup"><span data-stu-id="1584c-156">System.Decimal</span></span>                                                      |
|<span data-ttu-id="1584c-157">double</span><span class="sxs-lookup"><span data-stu-id="1584c-157">double</span></span>                       | <span data-ttu-id="1584c-158">Systeem. Double</span><span class="sxs-lookup"><span data-stu-id="1584c-158">System.Double</span></span>                                                       |
|<span data-ttu-id="1584c-159">DscLocalConfigurationManager</span><span class="sxs-lookup"><span data-stu-id="1584c-159">DscLocalConfigurationManager</span></span> | <span data-ttu-id="1584c-160">System. Management. Automation. DscLocalConfigurationManagerAttribute</span><span class="sxs-lookup"><span data-stu-id="1584c-160">System.Management.Automation.DscLocalConfigurationManagerAttribute</span></span>  |
|<span data-ttu-id="1584c-161">DscProperty</span><span class="sxs-lookup"><span data-stu-id="1584c-161">DscProperty</span></span>                  | <span data-ttu-id="1584c-162">System. Management. Automation. DscPropertyAttribute</span><span class="sxs-lookup"><span data-stu-id="1584c-162">System.Management.Automation.DscPropertyAttribute</span></span>                   |
|<span data-ttu-id="1584c-163">Dscresource bieden</span><span class="sxs-lookup"><span data-stu-id="1584c-163">DscResource</span></span>                  | <span data-ttu-id="1584c-164">System. Management. Automation. DscResourceAttribute</span><span class="sxs-lookup"><span data-stu-id="1584c-164">System.Management.Automation.DscResourceAttribute</span></span>                   |
|<span data-ttu-id="1584c-165">float</span><span class="sxs-lookup"><span data-stu-id="1584c-165">float</span></span>                        | <span data-ttu-id="1584c-166">System. single</span><span class="sxs-lookup"><span data-stu-id="1584c-166">System.Single</span></span>                                                       |
|<span data-ttu-id="1584c-167">guid</span><span class="sxs-lookup"><span data-stu-id="1584c-167">guid</span></span>                         | <span data-ttu-id="1584c-168">System. GUID</span><span class="sxs-lookup"><span data-stu-id="1584c-168">System.Guid</span></span>                                                         |
|<span data-ttu-id="1584c-169">hashtabel</span><span class="sxs-lookup"><span data-stu-id="1584c-169">hashtable</span></span>                    | <span data-ttu-id="1584c-170">System. Collections. hashtabel</span><span class="sxs-lookup"><span data-stu-id="1584c-170">System.Collections.Hashtable</span></span>                                        |
|<span data-ttu-id="1584c-171">initialsessionstate</span><span class="sxs-lookup"><span data-stu-id="1584c-171">initialsessionstate</span></span>          | <span data-ttu-id="1584c-172">System.Management.Automation.Runspaces.InitialSessionState</span><span class="sxs-lookup"><span data-stu-id="1584c-172">System.Management.Automation.Runspaces.InitialSessionState</span></span>          |
|<span data-ttu-id="1584c-173">int</span><span class="sxs-lookup"><span data-stu-id="1584c-173">int</span></span>                          | <span data-ttu-id="1584c-174">System. Int32</span><span class="sxs-lookup"><span data-stu-id="1584c-174">System.Int32</span></span>                                                        |
|<span data-ttu-id="1584c-175">INT16</span><span class="sxs-lookup"><span data-stu-id="1584c-175">int16</span></span>                        | <span data-ttu-id="1584c-176">System. Int16</span><span class="sxs-lookup"><span data-stu-id="1584c-176">System.Int16</span></span>                                                        |
|<span data-ttu-id="1584c-177">Int32</span><span class="sxs-lookup"><span data-stu-id="1584c-177">int32</span></span>                        | <span data-ttu-id="1584c-178">System. Int32</span><span class="sxs-lookup"><span data-stu-id="1584c-178">System.Int32</span></span>                                                        |
|<span data-ttu-id="1584c-179">int64</span><span class="sxs-lookup"><span data-stu-id="1584c-179">int64</span></span>                        | <span data-ttu-id="1584c-180">System. Int64</span><span class="sxs-lookup"><span data-stu-id="1584c-180">System.Int64</span></span>                                                        |
|<span data-ttu-id="1584c-181">IPAdres</span><span class="sxs-lookup"><span data-stu-id="1584c-181">ipaddress</span></span>                    | <span data-ttu-id="1584c-182">Systeem .net. IPAddress</span><span class="sxs-lookup"><span data-stu-id="1584c-182">System.Net.IPAddress</span></span>                                                |
|<span data-ttu-id="1584c-183">IPEndpoint</span><span class="sxs-lookup"><span data-stu-id="1584c-183">IPEndpoint</span></span>                   | <span data-ttu-id="1584c-184">System .net. IPEndPoint</span><span class="sxs-lookup"><span data-stu-id="1584c-184">System.Net.IPEndPoint</span></span>                                               |
|<span data-ttu-id="1584c-185">long</span><span class="sxs-lookup"><span data-stu-id="1584c-185">long</span></span>                         | <span data-ttu-id="1584c-186">System. Int64</span><span class="sxs-lookup"><span data-stu-id="1584c-186">System.Int64</span></span>                                                        |
|<span data-ttu-id="1584c-187">adres van afzender</span><span class="sxs-lookup"><span data-stu-id="1584c-187">mailaddress</span></span>                  | <span data-ttu-id="1584c-188">Het e-mail adres van System .net. E-mail</span><span class="sxs-lookup"><span data-stu-id="1584c-188">System.Net.Mail.MailAddress</span></span>                                         |
|<span data-ttu-id="1584c-189">NullString</span><span class="sxs-lookup"><span data-stu-id="1584c-189">NullString</span></span>                   | <span data-ttu-id="1584c-190">System. Management. Automation. language. NullString</span><span class="sxs-lookup"><span data-stu-id="1584c-190">System.Management.Automation.Language.NullString</span></span>                    |
|<span data-ttu-id="1584c-191">ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="1584c-191">ObjectSecurity</span></span>               | <span data-ttu-id="1584c-192">System. Security. AccessControl. ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="1584c-192">System.Security.AccessControl.ObjectSecurity</span></span>                        |
|<span data-ttu-id="1584c-193">Type</span><span class="sxs-lookup"><span data-stu-id="1584c-193">OutputType</span></span>                   | <span data-ttu-id="1584c-194">System. Management. Automation. OutputTypeAttribute</span><span class="sxs-lookup"><span data-stu-id="1584c-194">System.Management.Automation.OutputTypeAttribute</span></span>                    |
|<span data-ttu-id="1584c-195">Parameter</span><span class="sxs-lookup"><span data-stu-id="1584c-195">Parameter</span></span>                    | <span data-ttu-id="1584c-196">System. Management. Automation. ParameterAttribute</span><span class="sxs-lookup"><span data-stu-id="1584c-196">System.Management.Automation.ParameterAttribute</span></span>                     |
|<span data-ttu-id="1584c-197">PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="1584c-197">PhysicalAddress</span></span>              | <span data-ttu-id="1584c-198">System .net. NetworkInformation. PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="1584c-198">System.Net.NetworkInformation.PhysicalAddress</span></span>                       |
|<span data-ttu-id="1584c-199">powershell</span><span class="sxs-lookup"><span data-stu-id="1584c-199">powershell</span></span>                   | <span data-ttu-id="1584c-200">System. Management. Automation. Power shell</span><span class="sxs-lookup"><span data-stu-id="1584c-200">System.Management.Automation.PowerShell</span></span>                             |
|<span data-ttu-id="1584c-201">psaliasproperty</span><span class="sxs-lookup"><span data-stu-id="1584c-201">psaliasproperty</span></span>              | <span data-ttu-id="1584c-202">System. Management. Automation. PSAliasProperty</span><span class="sxs-lookup"><span data-stu-id="1584c-202">System.Management.Automation.PSAliasProperty</span></span>                        |
|<span data-ttu-id="1584c-203">pscredential</span><span class="sxs-lookup"><span data-stu-id="1584c-203">pscredential</span></span>                 | <span data-ttu-id="1584c-204">System. Management. Automation. PSCredential</span><span class="sxs-lookup"><span data-stu-id="1584c-204">System.Management.Automation.PSCredential</span></span>                           |
|<span data-ttu-id="1584c-205">pscustomobject</span><span class="sxs-lookup"><span data-stu-id="1584c-205">pscustomobject</span></span>               | <span data-ttu-id="1584c-206">System. Management. Automation. PSObject</span><span class="sxs-lookup"><span data-stu-id="1584c-206">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="1584c-207">PSDefaultValue</span><span class="sxs-lookup"><span data-stu-id="1584c-207">PSDefaultValue</span></span>               | <span data-ttu-id="1584c-208">System.Management.Automation.PSDefaultValueAttribute</span><span class="sxs-lookup"><span data-stu-id="1584c-208">System.Management.Automation.PSDefaultValueAttribute</span></span>                |
|<span data-ttu-id="1584c-209">pslistmodifier</span><span class="sxs-lookup"><span data-stu-id="1584c-209">pslistmodifier</span></span>               | <span data-ttu-id="1584c-210">System. Management. Automation. PSListModifier</span><span class="sxs-lookup"><span data-stu-id="1584c-210">System.Management.Automation.PSListModifier</span></span>                         |
|<span data-ttu-id="1584c-211">psmoduleinfo</span><span class="sxs-lookup"><span data-stu-id="1584c-211">psmoduleinfo</span></span>                 | <span data-ttu-id="1584c-212">System. Management. Automation. PSModuleInfo</span><span class="sxs-lookup"><span data-stu-id="1584c-212">System.Management.Automation.PSModuleInfo</span></span>                           |
|<span data-ttu-id="1584c-213">psnoteproperty</span><span class="sxs-lookup"><span data-stu-id="1584c-213">psnoteproperty</span></span>               | <span data-ttu-id="1584c-214">System. Management. Automation. PSNoteProperty</span><span class="sxs-lookup"><span data-stu-id="1584c-214">System.Management.Automation.PSNoteProperty</span></span>                         |
|<span data-ttu-id="1584c-215">psobject</span><span class="sxs-lookup"><span data-stu-id="1584c-215">psobject</span></span>                     | <span data-ttu-id="1584c-216">System. Management. Automation. PSObject</span><span class="sxs-lookup"><span data-stu-id="1584c-216">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="1584c-217">psprimitivedictionary</span><span class="sxs-lookup"><span data-stu-id="1584c-217">psprimitivedictionary</span></span>        | <span data-ttu-id="1584c-218">System. Management. Automation. PSPrimitiveDictionary</span><span class="sxs-lookup"><span data-stu-id="1584c-218">System.Management.Automation.PSPrimitiveDictionary</span></span>                  |
|<span data-ttu-id="1584c-219">psscriptmethod</span><span class="sxs-lookup"><span data-stu-id="1584c-219">psscriptmethod</span></span>               | <span data-ttu-id="1584c-220">System. Management. Automation. PSScriptMethod</span><span class="sxs-lookup"><span data-stu-id="1584c-220">System.Management.Automation.PSScriptMethod</span></span>                         |
|<span data-ttu-id="1584c-221">psscriptproperty</span><span class="sxs-lookup"><span data-stu-id="1584c-221">psscriptproperty</span></span>             | <span data-ttu-id="1584c-222">System. Management. Automation. PSScriptProperty</span><span class="sxs-lookup"><span data-stu-id="1584c-222">System.Management.Automation.PSScriptProperty</span></span>                       |
|<span data-ttu-id="1584c-223">PSTypeNameAttribute</span><span class="sxs-lookup"><span data-stu-id="1584c-223">PSTypeNameAttribute</span></span>          | <span data-ttu-id="1584c-224">System. Management. Automation. PSTypeNameAttribute</span><span class="sxs-lookup"><span data-stu-id="1584c-224">System.Management.Automation.PSTypeNameAttribute</span></span>                    |
|<span data-ttu-id="1584c-225">psvariable</span><span class="sxs-lookup"><span data-stu-id="1584c-225">psvariable</span></span>                   | <span data-ttu-id="1584c-226">System. Management. Automation. PSVariable</span><span class="sxs-lookup"><span data-stu-id="1584c-226">System.Management.Automation.PSVariable</span></span>                             |
|<span data-ttu-id="1584c-227">psvariableproperty</span><span class="sxs-lookup"><span data-stu-id="1584c-227">psvariableproperty</span></span>           | <span data-ttu-id="1584c-228">System. Management. Automation. PSVariableProperty</span><span class="sxs-lookup"><span data-stu-id="1584c-228">System.Management.Automation.PSVariableProperty</span></span>                     |
|<span data-ttu-id="1584c-229">verwijzing</span><span class="sxs-lookup"><span data-stu-id="1584c-229">ref</span></span>                          | <span data-ttu-id="1584c-230">System. Management. Automation. PSReference</span><span class="sxs-lookup"><span data-stu-id="1584c-230">System.Management.Automation.PSReference</span></span>                            |
|<span data-ttu-id="1584c-231">reguliere</span><span class="sxs-lookup"><span data-stu-id="1584c-231">regex</span></span>                        | <span data-ttu-id="1584c-232">System. Text. RegularExpressions. regex</span><span class="sxs-lookup"><span data-stu-id="1584c-232">System.Text.RegularExpressions.Regex</span></span>                                |
|<span data-ttu-id="1584c-233">runs</span><span class="sxs-lookup"><span data-stu-id="1584c-233">runspace</span></span>                     | <span data-ttu-id="1584c-234">System. Management. Automation. Runspaces. runs Pace</span><span class="sxs-lookup"><span data-stu-id="1584c-234">System.Management.Automation.Runspaces.Runspace</span></span>                     |
|<span data-ttu-id="1584c-235">runspacefactory</span><span class="sxs-lookup"><span data-stu-id="1584c-235">runspacefactory</span></span>              | <span data-ttu-id="1584c-236">System. Management. Automation. Runspaces. RunspaceFactory</span><span class="sxs-lookup"><span data-stu-id="1584c-236">System.Management.Automation.Runspaces.RunspaceFactory</span></span>              |
|<span data-ttu-id="1584c-237">sbyte</span><span class="sxs-lookup"><span data-stu-id="1584c-237">sbyte</span></span>                        | <span data-ttu-id="1584c-238">Systeem. SByte</span><span class="sxs-lookup"><span data-stu-id="1584c-238">System.SByte</span></span>                                                        |
|<span data-ttu-id="1584c-239">script Block</span><span class="sxs-lookup"><span data-stu-id="1584c-239">scriptblock</span></span>                  | <span data-ttu-id="1584c-240">System. Management. Automation. script Block</span><span class="sxs-lookup"><span data-stu-id="1584c-240">System.Management.Automation.ScriptBlock</span></span>                            |
|<span data-ttu-id="1584c-241">securestring</span><span class="sxs-lookup"><span data-stu-id="1584c-241">securestring</span></span>                 | <span data-ttu-id="1584c-242">System. Security. SecureString</span><span class="sxs-lookup"><span data-stu-id="1584c-242">System.Security.SecureString</span></span>                                        |
|<span data-ttu-id="1584c-243">afzonderlijke</span><span class="sxs-lookup"><span data-stu-id="1584c-243">single</span></span>                       | <span data-ttu-id="1584c-244">System. single</span><span class="sxs-lookup"><span data-stu-id="1584c-244">System.Single</span></span>                                                       |
|<span data-ttu-id="1584c-245">tekenreeks</span><span class="sxs-lookup"><span data-stu-id="1584c-245">string</span></span>                       | <span data-ttu-id="1584c-246">System. String</span><span class="sxs-lookup"><span data-stu-id="1584c-246">System.String</span></span>                                                       |
|<span data-ttu-id="1584c-247">SupportsWildcards</span><span class="sxs-lookup"><span data-stu-id="1584c-247">SupportsWildcards</span></span>            | <span data-ttu-id="1584c-248">System. Management. Automation. SupportsWildcardsAttribute</span><span class="sxs-lookup"><span data-stu-id="1584c-248">System.Management.Automation.SupportsWildcardsAttribute</span></span>             |
|<span data-ttu-id="1584c-249">schakelen</span><span class="sxs-lookup"><span data-stu-id="1584c-249">switch</span></span>                       | <span data-ttu-id="1584c-250">System. Management. Automation. SwitchParameter</span><span class="sxs-lookup"><span data-stu-id="1584c-250">System.Management.Automation.SwitchParameter</span></span>                        |
|<span data-ttu-id="1584c-251">tijdsbestek</span><span class="sxs-lookup"><span data-stu-id="1584c-251">timespan</span></span>                     | <span data-ttu-id="1584c-252">System. time span</span><span class="sxs-lookup"><span data-stu-id="1584c-252">System.TimeSpan</span></span>                                                     |
|<span data-ttu-id="1584c-253">type</span><span class="sxs-lookup"><span data-stu-id="1584c-253">type</span></span>                         | <span data-ttu-id="1584c-254">System. type</span><span class="sxs-lookup"><span data-stu-id="1584c-254">System.Type</span></span>                                                         |
|<span data-ttu-id="1584c-255">uint16</span><span class="sxs-lookup"><span data-stu-id="1584c-255">uint16</span></span>                       | <span data-ttu-id="1584c-256">System. UInt16</span><span class="sxs-lookup"><span data-stu-id="1584c-256">System.UInt16</span></span>                                                       |
|<span data-ttu-id="1584c-257">uint32</span><span class="sxs-lookup"><span data-stu-id="1584c-257">uint32</span></span>                       | <span data-ttu-id="1584c-258">System. UInt32</span><span class="sxs-lookup"><span data-stu-id="1584c-258">System.UInt32</span></span>                                                       |
|<span data-ttu-id="1584c-259">uint64</span><span class="sxs-lookup"><span data-stu-id="1584c-259">uint64</span></span>                       | <span data-ttu-id="1584c-260">System. UInt64</span><span class="sxs-lookup"><span data-stu-id="1584c-260">System.UInt64</span></span>                                                       |
|<span data-ttu-id="1584c-261">URI</span><span class="sxs-lookup"><span data-stu-id="1584c-261">uri</span></span>                          | <span data-ttu-id="1584c-262">System. URI</span><span class="sxs-lookup"><span data-stu-id="1584c-262">System.Uri</span></span>                                                          |
|<span data-ttu-id="1584c-263">ValidateCount</span><span class="sxs-lookup"><span data-stu-id="1584c-263">ValidateCount</span></span>                | <span data-ttu-id="1584c-264">System. Management. Automation. ValidateCountAttribute</span><span class="sxs-lookup"><span data-stu-id="1584c-264">System.Management.Automation.ValidateCountAttribute</span></span>                 |
|<span data-ttu-id="1584c-265">ValidateDrive</span><span class="sxs-lookup"><span data-stu-id="1584c-265">ValidateDrive</span></span>                | <span data-ttu-id="1584c-266">System. Management. Automation. ValidateDriveAttribute</span><span class="sxs-lookup"><span data-stu-id="1584c-266">System.Management.Automation.ValidateDriveAttribute</span></span>                 |
|<span data-ttu-id="1584c-267">ValidateLength</span><span class="sxs-lookup"><span data-stu-id="1584c-267">ValidateLength</span></span>               | <span data-ttu-id="1584c-268">System. Management. Automation. ValidateLengthAttribute</span><span class="sxs-lookup"><span data-stu-id="1584c-268">System.Management.Automation.ValidateLengthAttribute</span></span>                |
|<span data-ttu-id="1584c-269">ValidateNotNull</span><span class="sxs-lookup"><span data-stu-id="1584c-269">ValidateNotNull</span></span>              | <span data-ttu-id="1584c-270">System. Management. Automation. ValidateNotNullAttribute</span><span class="sxs-lookup"><span data-stu-id="1584c-270">System.Management.Automation.ValidateNotNullAttribute</span></span>               |
|<span data-ttu-id="1584c-271">ValidateNotNullOrEmpty</span><span class="sxs-lookup"><span data-stu-id="1584c-271">ValidateNotNullOrEmpty</span></span>       | <span data-ttu-id="1584c-272">System. Management. Automation. ValidateNotNullOrEmptyAttribute</span><span class="sxs-lookup"><span data-stu-id="1584c-272">System.Management.Automation.ValidateNotNullOrEmptyAttribute</span></span>        |
|<span data-ttu-id="1584c-273">ValidatePattern</span><span class="sxs-lookup"><span data-stu-id="1584c-273">ValidatePattern</span></span>              | <span data-ttu-id="1584c-274">System. Management. Automation. ValidatePatternAttribute</span><span class="sxs-lookup"><span data-stu-id="1584c-274">System.Management.Automation.ValidatePatternAttribute</span></span>               |
|<span data-ttu-id="1584c-275">ValidateRange</span><span class="sxs-lookup"><span data-stu-id="1584c-275">ValidateRange</span></span>                | <span data-ttu-id="1584c-276">System. Management. Automation. ValidateRangeAttribute</span><span class="sxs-lookup"><span data-stu-id="1584c-276">System.Management.Automation.ValidateRangeAttribute</span></span>                 |
|<span data-ttu-id="1584c-277">ValidateScript</span><span class="sxs-lookup"><span data-stu-id="1584c-277">ValidateScript</span></span>               | <span data-ttu-id="1584c-278">System. Management. Automation. ValidateScriptAttribute</span><span class="sxs-lookup"><span data-stu-id="1584c-278">System.Management.Automation.ValidateScriptAttribute</span></span>                |
|<span data-ttu-id="1584c-279">Validatieset</span><span class="sxs-lookup"><span data-stu-id="1584c-279">ValidateSet</span></span>                  | <span data-ttu-id="1584c-280">System. Management. Automation. ValidateSetAttribute</span><span class="sxs-lookup"><span data-stu-id="1584c-280">System.Management.Automation.ValidateSetAttribute</span></span>                   |
|<span data-ttu-id="1584c-281">ValidateTrustedData</span><span class="sxs-lookup"><span data-stu-id="1584c-281">ValidateTrustedData</span></span>          | <span data-ttu-id="1584c-282">System. Management. Automation. ValidateTrustedDataAttribute</span><span class="sxs-lookup"><span data-stu-id="1584c-282">System.Management.Automation.ValidateTrustedDataAttribute</span></span>           |
|<span data-ttu-id="1584c-283">ValidateUserDrive</span><span class="sxs-lookup"><span data-stu-id="1584c-283">ValidateUserDrive</span></span>            | <span data-ttu-id="1584c-284">System. Management. Automation. ValidateUserDriveAttribute</span><span class="sxs-lookup"><span data-stu-id="1584c-284">System.Management.Automation.ValidateUserDriveAttribute</span></span>             |
|<span data-ttu-id="1584c-285">versie</span><span class="sxs-lookup"><span data-stu-id="1584c-285">version</span></span>                      | <span data-ttu-id="1584c-286">Systeem. versie</span><span class="sxs-lookup"><span data-stu-id="1584c-286">System.Version</span></span>                                                      |
|<span data-ttu-id="1584c-287">ongeldige</span><span class="sxs-lookup"><span data-stu-id="1584c-287">void</span></span>                         | <span data-ttu-id="1584c-288">System. void</span><span class="sxs-lookup"><span data-stu-id="1584c-288">System.Void</span></span>                                                         |
|<span data-ttu-id="1584c-289">WildcardPattern</span><span class="sxs-lookup"><span data-stu-id="1584c-289">WildcardPattern</span></span>              | <span data-ttu-id="1584c-290">System. Management. Automation. WildcardPattern</span><span class="sxs-lookup"><span data-stu-id="1584c-290">System.Management.Automation.WildcardPattern</span></span>                        |
|<span data-ttu-id="1584c-291">WMI</span><span class="sxs-lookup"><span data-stu-id="1584c-291">wmi</span></span>                          | <span data-ttu-id="1584c-292">System. Management. ManagementObject</span><span class="sxs-lookup"><span data-stu-id="1584c-292">System.Management.ManagementObject</span></span>                                  |
|<span data-ttu-id="1584c-293">wmiclass</span><span class="sxs-lookup"><span data-stu-id="1584c-293">wmiclass</span></span>                     | <span data-ttu-id="1584c-294">System. Management. ManagementClass</span><span class="sxs-lookup"><span data-stu-id="1584c-294">System.Management.ManagementClass</span></span>                                   |
|<span data-ttu-id="1584c-295">wmisearcher</span><span class="sxs-lookup"><span data-stu-id="1584c-295">wmisearcher</span></span>                  | <span data-ttu-id="1584c-296">System. Management. ManagementObjectSearcher</span><span class="sxs-lookup"><span data-stu-id="1584c-296">System.Management.ManagementObjectSearcher</span></span>                          |
|<span data-ttu-id="1584c-297">X500DistinguishedName</span><span class="sxs-lookup"><span data-stu-id="1584c-297">X500DistinguishedName</span></span>        | <span data-ttu-id="1584c-298">System. Security. Cryptography. X509Certificates. X500DistinguishedName</span><span class="sxs-lookup"><span data-stu-id="1584c-298">System.Security.Cryptography.X509Certificates.X500DistinguishedName</span></span> |
|<span data-ttu-id="1584c-299">X509Certificate</span><span class="sxs-lookup"><span data-stu-id="1584c-299">X509Certificate</span></span>              | <span data-ttu-id="1584c-300">System. Security. Cryptography. X509Certificates. X509Certificate</span><span class="sxs-lookup"><span data-stu-id="1584c-300">System.Security.Cryptography.X509Certificates.X509Certificate</span></span>       |
|<span data-ttu-id="1584c-301">xml</span><span class="sxs-lookup"><span data-stu-id="1584c-301">xml</span></span>                          | <span data-ttu-id="1584c-302">System.Xml.Xmldocument</span><span class="sxs-lookup"><span data-stu-id="1584c-302">System.Xml.XmlDocument</span></span>                                              |
