reference/7.0/Microsoft.PowerShell.Core/About/about_Type_Accelerators.md
---
description: Beschrijft de beschik bare typen Accelerators voor .NET Framework-klassen
keywords: powershell,cmdlet
Locale: en-US
ms.date: 05/01/2020
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.core/about/about_type_accelerators?view=powershell-7&WT.mc_id=ps-gethelp
schema: 2.0.0
title: about_Type_Accelerators
ms.openlocfilehash: 6f73aa590b64cda5739a2a118b2b4c5a6c103a67
ms.sourcegitcommit: f874dc1d4236e06a3df195d179f59e0a7d9f8436
ms.translationtype: MT
ms.contentlocale: nl-NL
ms.lasthandoff: 10/13/2020
ms.locfileid: "93252170"
---
# <a name="about-type-accelerators"></a><span data-ttu-id="afcee-104">Over type Accelerators</span><span class="sxs-lookup"><span data-stu-id="afcee-104">About Type Accelerators</span></span>

## <a name="short-desription"></a><span data-ttu-id="afcee-105">KORTE BESCHRIJVING</span><span class="sxs-lookup"><span data-stu-id="afcee-105">SHORT DESRIPTION</span></span>
<span data-ttu-id="afcee-106">Beschrijft de beschik bare typen Accelerators voor .NET Framework-klassen</span><span class="sxs-lookup"><span data-stu-id="afcee-106">Describes the Type accelerators available for .NET framework classes</span></span>

## <a name="long-description"></a><span data-ttu-id="afcee-107">LANGE BESCHRIJVING</span><span class="sxs-lookup"><span data-stu-id="afcee-107">LONG DESCRIPTION</span></span>

<span data-ttu-id="afcee-108">Type Accelerators zijn aliassen voor .NET Framework-klassen.</span><span class="sxs-lookup"><span data-stu-id="afcee-108">Type accelerators are aliases for .NET framework classes.</span></span> <span data-ttu-id="afcee-109">Hiermee krijgt u toegang tot specifieke .NET Framework-klassen zonder expliciet de volledige naam van de klasse te hoeven typen.</span><span class="sxs-lookup"><span data-stu-id="afcee-109">They allow you to access specific .NET framework classes without having to explicitly type the entire class name.</span></span> <span data-ttu-id="afcee-110">U kunt bijvoorbeeld de **AliasAttribute** -klasse verkorten van `[System.Management.Automation.AliasAttribute]` tot `[Alias]` .</span><span class="sxs-lookup"><span data-stu-id="afcee-110">For example, you can shorten the **AliasAttribute** class from `[System.Management.Automation.AliasAttribute]` to `[Alias]`.</span></span>

> [!NOTE]
> <span data-ttu-id="afcee-111">Alle type Accelerators moeten nog steeds worden ingepakt in vier Kante haken ( `[]` ).</span><span class="sxs-lookup"><span data-stu-id="afcee-111">All type accelerators still need to be wrapped in square brackets(`[]`).</span></span>

## <a name="available-type-accelerators"></a><span data-ttu-id="afcee-112">Beschik bare type Accelerators</span><span class="sxs-lookup"><span data-stu-id="afcee-112">Available Type Accelerators</span></span>

|        <span data-ttu-id="afcee-113">Accelerator</span><span class="sxs-lookup"><span data-stu-id="afcee-113">Accelerator</span></span>          |                           <span data-ttu-id="afcee-114">Volledige klassen naam</span><span class="sxs-lookup"><span data-stu-id="afcee-114">Full Class Name</span></span>                           |
|---------------------------- | ------------------------------------------------------------------- |
|<span data-ttu-id="afcee-115">WMI</span><span class="sxs-lookup"><span data-stu-id="afcee-115">adsi</span></span>                         | <span data-ttu-id="afcee-116">System. Directory Services. directory entry</span><span class="sxs-lookup"><span data-stu-id="afcee-116">System.DirectoryServices.DirectoryEntry</span></span>                             |
|<span data-ttu-id="afcee-117">adsisearcher</span><span class="sxs-lookup"><span data-stu-id="afcee-117">adsisearcher</span></span>                 | <span data-ttu-id="afcee-118">System. Directory Services. DirectorySearcher</span><span class="sxs-lookup"><span data-stu-id="afcee-118">System.DirectoryServices.DirectorySearcher</span></span>                          |
|<span data-ttu-id="afcee-119">Alias</span><span class="sxs-lookup"><span data-stu-id="afcee-119">Alias</span></span>                        | <span data-ttu-id="afcee-120">System. Management. Automation. AliasAttribute</span><span class="sxs-lookup"><span data-stu-id="afcee-120">System.Management.Automation.AliasAttribute</span></span>                         |
|<span data-ttu-id="afcee-121">AllowEmptyCollection</span><span class="sxs-lookup"><span data-stu-id="afcee-121">AllowEmptyCollection</span></span>         | <span data-ttu-id="afcee-122">System. Management. Automation. AllowEmptyCollectionAttribute</span><span class="sxs-lookup"><span data-stu-id="afcee-122">System.Management.Automation.AllowEmptyCollectionAttribute</span></span>          |
|<span data-ttu-id="afcee-123">AllowEmptyString</span><span class="sxs-lookup"><span data-stu-id="afcee-123">AllowEmptyString</span></span>             | <span data-ttu-id="afcee-124">System. Management. Automation. AllowEmptyStringAttribute</span><span class="sxs-lookup"><span data-stu-id="afcee-124">System.Management.Automation.AllowEmptyStringAttribute</span></span>              |
|<span data-ttu-id="afcee-125">AllowNull</span><span class="sxs-lookup"><span data-stu-id="afcee-125">AllowNull</span></span>                    | <span data-ttu-id="afcee-126">System. Management. Automation. AllowNullAttribute</span><span class="sxs-lookup"><span data-stu-id="afcee-126">System.Management.Automation.AllowNullAttribute</span></span>                     |
|<span data-ttu-id="afcee-127">ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="afcee-127">ArgumentCompleter</span></span>            | <span data-ttu-id="afcee-128">System. Management. Automation. ArgumentCompleterAttribute</span><span class="sxs-lookup"><span data-stu-id="afcee-128">System.Management.Automation.ArgumentCompleterAttribute</span></span>             |
|<span data-ttu-id="afcee-129">ArgumentCompletions</span><span class="sxs-lookup"><span data-stu-id="afcee-129">ArgumentCompletions</span></span>          | <span data-ttu-id="afcee-130">System. Management. Automation. ArgumentCompletionsAttribute</span><span class="sxs-lookup"><span data-stu-id="afcee-130">System.Management.Automation.ArgumentCompletionsAttribute</span></span>           |
|<span data-ttu-id="afcee-131">matrix</span><span class="sxs-lookup"><span data-stu-id="afcee-131">array</span></span>                        | <span data-ttu-id="afcee-132">System. matrix</span><span class="sxs-lookup"><span data-stu-id="afcee-132">System.Array</span></span>                                                        |
|<span data-ttu-id="afcee-133">bigint</span><span class="sxs-lookup"><span data-stu-id="afcee-133">bigint</span></span>                       | <span data-ttu-id="afcee-134">Systeem. numerics. BigInteger</span><span class="sxs-lookup"><span data-stu-id="afcee-134">System.Numerics.BigInteger</span></span>                                          |
|<span data-ttu-id="afcee-135">booleaans</span><span class="sxs-lookup"><span data-stu-id="afcee-135">bool</span></span>                         | <span data-ttu-id="afcee-136">System. Boolean</span><span class="sxs-lookup"><span data-stu-id="afcee-136">System.Boolean</span></span>                                                      |
|<span data-ttu-id="afcee-137">DBCS</span><span class="sxs-lookup"><span data-stu-id="afcee-137">byte</span></span>                         | <span data-ttu-id="afcee-138">System. byte</span><span class="sxs-lookup"><span data-stu-id="afcee-138">System.Byte</span></span>                                                         |
|<span data-ttu-id="afcee-139">char</span><span class="sxs-lookup"><span data-stu-id="afcee-139">char</span></span>                         | <span data-ttu-id="afcee-140">System. char</span><span class="sxs-lookup"><span data-stu-id="afcee-140">System.Char</span></span>                                                         |
|<span data-ttu-id="afcee-141">cimclass</span><span class="sxs-lookup"><span data-stu-id="afcee-141">cimclass</span></span>                     | <span data-ttu-id="afcee-142">Micro soft. Management. Infrastructure. CimClass</span><span class="sxs-lookup"><span data-stu-id="afcee-142">Microsoft.Management.Infrastructure.CimClass</span></span>                        |
|<span data-ttu-id="afcee-143">cimconverter</span><span class="sxs-lookup"><span data-stu-id="afcee-143">cimconverter</span></span>                 | <span data-ttu-id="afcee-144">Micro soft. Management. Infrastructure. CimConverter</span><span class="sxs-lookup"><span data-stu-id="afcee-144">Microsoft.Management.Infrastructure.CimConverter</span></span>                    |
|<span data-ttu-id="afcee-145">ciminstance</span><span class="sxs-lookup"><span data-stu-id="afcee-145">ciminstance</span></span>                  | <span data-ttu-id="afcee-146">Micro soft. Management. Infrastructure. CimInstance</span><span class="sxs-lookup"><span data-stu-id="afcee-146">Microsoft.Management.Infrastructure.CimInstance</span></span>                     |
|<span data-ttu-id="afcee-147">CimSession</span><span class="sxs-lookup"><span data-stu-id="afcee-147">CimSession</span></span>                   | <span data-ttu-id="afcee-148">Micro soft. Management. Infrastructure. CimSession</span><span class="sxs-lookup"><span data-stu-id="afcee-148">Microsoft.Management.Infrastructure.CimSession</span></span>                      |
|<span data-ttu-id="afcee-149">cimtype</span><span class="sxs-lookup"><span data-stu-id="afcee-149">cimtype</span></span>                      | <span data-ttu-id="afcee-150">Micro soft. Management. Infrastructure. CimType</span><span class="sxs-lookup"><span data-stu-id="afcee-150">Microsoft.Management.Infrastructure.CimType</span></span>                         |
|<span data-ttu-id="afcee-151">CmdletBinding</span><span class="sxs-lookup"><span data-stu-id="afcee-151">CmdletBinding</span></span>                | <span data-ttu-id="afcee-152">System. Management. Automation. CmdletBindingAttribute</span><span class="sxs-lookup"><span data-stu-id="afcee-152">System.Management.Automation.CmdletBindingAttribute</span></span>                 |
|<span data-ttu-id="afcee-153">variabele</span><span class="sxs-lookup"><span data-stu-id="afcee-153">cultureinfo</span></span>                  | <span data-ttu-id="afcee-154">System. Globalization. Culture info</span><span class="sxs-lookup"><span data-stu-id="afcee-154">System.Globalization.CultureInfo</span></span>                                    |
|<span data-ttu-id="afcee-155">datum/tijd</span><span class="sxs-lookup"><span data-stu-id="afcee-155">datetime</span></span>                     | <span data-ttu-id="afcee-156">System. DateTime</span><span class="sxs-lookup"><span data-stu-id="afcee-156">System.DateTime</span></span>                                                     |
|<span data-ttu-id="afcee-157">decimal</span><span class="sxs-lookup"><span data-stu-id="afcee-157">decimal</span></span>                      | <span data-ttu-id="afcee-158">Systeem. decimaal</span><span class="sxs-lookup"><span data-stu-id="afcee-158">System.Decimal</span></span>                                                      |
|<span data-ttu-id="afcee-159">double</span><span class="sxs-lookup"><span data-stu-id="afcee-159">double</span></span>                       | <span data-ttu-id="afcee-160">Systeem. Double</span><span class="sxs-lookup"><span data-stu-id="afcee-160">System.Double</span></span>                                                       |
|<span data-ttu-id="afcee-161">DscLocalConfigurationManager</span><span class="sxs-lookup"><span data-stu-id="afcee-161">DscLocalConfigurationManager</span></span> | <span data-ttu-id="afcee-162">System. Management. Automation. DscLocalConfigurationManagerAttribute</span><span class="sxs-lookup"><span data-stu-id="afcee-162">System.Management.Automation.DscLocalConfigurationManagerAttribute</span></span>  |
|<span data-ttu-id="afcee-163">DscProperty</span><span class="sxs-lookup"><span data-stu-id="afcee-163">DscProperty</span></span>                  | <span data-ttu-id="afcee-164">System. Management. Automation. DscPropertyAttribute</span><span class="sxs-lookup"><span data-stu-id="afcee-164">System.Management.Automation.DscPropertyAttribute</span></span>                   |
|<span data-ttu-id="afcee-165">Dscresource bieden</span><span class="sxs-lookup"><span data-stu-id="afcee-165">DscResource</span></span>                  | <span data-ttu-id="afcee-166">System. Management. Automation. DscResourceAttribute</span><span class="sxs-lookup"><span data-stu-id="afcee-166">System.Management.Automation.DscResourceAttribute</span></span>                   |
|<span data-ttu-id="afcee-167">ExperimentAction</span><span class="sxs-lookup"><span data-stu-id="afcee-167">ExperimentAction</span></span>             | <span data-ttu-id="afcee-168">System. Management. Automation. ExperimentAction</span><span class="sxs-lookup"><span data-stu-id="afcee-168">System.Management.Automation.ExperimentAction</span></span>                       |
|<span data-ttu-id="afcee-169">Experimenteel</span><span class="sxs-lookup"><span data-stu-id="afcee-169">Experimental</span></span>                 | <span data-ttu-id="afcee-170">System. Management. Automation. ExperimentalAttribute</span><span class="sxs-lookup"><span data-stu-id="afcee-170">System.Management.Automation.ExperimentalAttribute</span></span>                  |
|<span data-ttu-id="afcee-171">ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="afcee-171">ExperimentalFeature</span></span>          | <span data-ttu-id="afcee-172">System. Management. Automation. ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="afcee-172">System.Management.Automation.ExperimentalFeature</span></span>                    |
|<span data-ttu-id="afcee-173">float</span><span class="sxs-lookup"><span data-stu-id="afcee-173">float</span></span>                        | <span data-ttu-id="afcee-174">System. single</span><span class="sxs-lookup"><span data-stu-id="afcee-174">System.Single</span></span>                                                       |
|<span data-ttu-id="afcee-175">guid</span><span class="sxs-lookup"><span data-stu-id="afcee-175">guid</span></span>                         | <span data-ttu-id="afcee-176">System. GUID</span><span class="sxs-lookup"><span data-stu-id="afcee-176">System.Guid</span></span>                                                         |
|<span data-ttu-id="afcee-177">hashtabel</span><span class="sxs-lookup"><span data-stu-id="afcee-177">hashtable</span></span>                    | <span data-ttu-id="afcee-178">System. Collections. hashtabel</span><span class="sxs-lookup"><span data-stu-id="afcee-178">System.Collections.Hashtable</span></span>                                        |
|<span data-ttu-id="afcee-179">initialsessionstate</span><span class="sxs-lookup"><span data-stu-id="afcee-179">initialsessionstate</span></span>          | <span data-ttu-id="afcee-180">System.Management.Automation.Runspaces.InitialSessionState</span><span class="sxs-lookup"><span data-stu-id="afcee-180">System.Management.Automation.Runspaces.InitialSessionState</span></span>          |
|<span data-ttu-id="afcee-181">int</span><span class="sxs-lookup"><span data-stu-id="afcee-181">int</span></span>                          | <span data-ttu-id="afcee-182">System. Int32</span><span class="sxs-lookup"><span data-stu-id="afcee-182">System.Int32</span></span>                                                        |
|<span data-ttu-id="afcee-183">INT16</span><span class="sxs-lookup"><span data-stu-id="afcee-183">int16</span></span>                        | <span data-ttu-id="afcee-184">System. Int16</span><span class="sxs-lookup"><span data-stu-id="afcee-184">System.Int16</span></span>                                                        |
|<span data-ttu-id="afcee-185">Int32</span><span class="sxs-lookup"><span data-stu-id="afcee-185">int32</span></span>                        | <span data-ttu-id="afcee-186">System. Int32</span><span class="sxs-lookup"><span data-stu-id="afcee-186">System.Int32</span></span>                                                        |
|<span data-ttu-id="afcee-187">int64</span><span class="sxs-lookup"><span data-stu-id="afcee-187">int64</span></span>                        | <span data-ttu-id="afcee-188">System. Int64</span><span class="sxs-lookup"><span data-stu-id="afcee-188">System.Int64</span></span>                                                        |
|<span data-ttu-id="afcee-189">IPAdres</span><span class="sxs-lookup"><span data-stu-id="afcee-189">ipaddress</span></span>                    | <span data-ttu-id="afcee-190">Systeem .net. IPAddress</span><span class="sxs-lookup"><span data-stu-id="afcee-190">System.Net.IPAddress</span></span>                                                |
|<span data-ttu-id="afcee-191">IPEndpoint</span><span class="sxs-lookup"><span data-stu-id="afcee-191">IPEndpoint</span></span>                   | <span data-ttu-id="afcee-192">System .net. IPEndPoint</span><span class="sxs-lookup"><span data-stu-id="afcee-192">System.Net.IPEndPoint</span></span>                                               |
|<span data-ttu-id="afcee-193">long</span><span class="sxs-lookup"><span data-stu-id="afcee-193">long</span></span>                         | <span data-ttu-id="afcee-194">System. Int64</span><span class="sxs-lookup"><span data-stu-id="afcee-194">System.Int64</span></span>                                                        |
|<span data-ttu-id="afcee-195">adres van afzender</span><span class="sxs-lookup"><span data-stu-id="afcee-195">mailaddress</span></span>                  | <span data-ttu-id="afcee-196">Het e-mail adres van System .net. E-mail</span><span class="sxs-lookup"><span data-stu-id="afcee-196">System.Net.Mail.MailAddress</span></span>                                         |
|<span data-ttu-id="afcee-197">NullString</span><span class="sxs-lookup"><span data-stu-id="afcee-197">NullString</span></span>                   | <span data-ttu-id="afcee-198">System. Management. Automation. language. NullString</span><span class="sxs-lookup"><span data-stu-id="afcee-198">System.Management.Automation.Language.NullString</span></span>                    |
|<span data-ttu-id="afcee-199">ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="afcee-199">ObjectSecurity</span></span>               | <span data-ttu-id="afcee-200">System. Security. AccessControl. ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="afcee-200">System.Security.AccessControl.ObjectSecurity</span></span>                        |
|<span data-ttu-id="afcee-201">Type</span><span class="sxs-lookup"><span data-stu-id="afcee-201">OutputType</span></span>                   | <span data-ttu-id="afcee-202">System. Management. Automation. OutputTypeAttribute</span><span class="sxs-lookup"><span data-stu-id="afcee-202">System.Management.Automation.OutputTypeAttribute</span></span>                    |
|<span data-ttu-id="afcee-203">Parameter</span><span class="sxs-lookup"><span data-stu-id="afcee-203">Parameter</span></span>                    | <span data-ttu-id="afcee-204">System. Management. Automation. ParameterAttribute</span><span class="sxs-lookup"><span data-stu-id="afcee-204">System.Management.Automation.ParameterAttribute</span></span>                     |
|<span data-ttu-id="afcee-205">PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="afcee-205">PhysicalAddress</span></span>              | <span data-ttu-id="afcee-206">System .net. NetworkInformation. PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="afcee-206">System.Net.NetworkInformation.PhysicalAddress</span></span>                       |
|<span data-ttu-id="afcee-207">powershell</span><span class="sxs-lookup"><span data-stu-id="afcee-207">powershell</span></span>                   | <span data-ttu-id="afcee-208">System. Management. Automation. Power shell</span><span class="sxs-lookup"><span data-stu-id="afcee-208">System.Management.Automation.PowerShell</span></span>                             |
|<span data-ttu-id="afcee-209">psaliasproperty</span><span class="sxs-lookup"><span data-stu-id="afcee-209">psaliasproperty</span></span>              | <span data-ttu-id="afcee-210">System. Management. Automation. PSAliasProperty</span><span class="sxs-lookup"><span data-stu-id="afcee-210">System.Management.Automation.PSAliasProperty</span></span>                        |
|<span data-ttu-id="afcee-211">pscredential</span><span class="sxs-lookup"><span data-stu-id="afcee-211">pscredential</span></span>                 | <span data-ttu-id="afcee-212">System. Management. Automation. PSCredential</span><span class="sxs-lookup"><span data-stu-id="afcee-212">System.Management.Automation.PSCredential</span></span>                           |
|<span data-ttu-id="afcee-213">pscustomobject</span><span class="sxs-lookup"><span data-stu-id="afcee-213">pscustomobject</span></span>               | <span data-ttu-id="afcee-214">System. Management. Automation. PSObject</span><span class="sxs-lookup"><span data-stu-id="afcee-214">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="afcee-215">PSDefaultValue</span><span class="sxs-lookup"><span data-stu-id="afcee-215">PSDefaultValue</span></span>               | <span data-ttu-id="afcee-216">System.Management.Automation.PSDefaultValueAttribute</span><span class="sxs-lookup"><span data-stu-id="afcee-216">System.Management.Automation.PSDefaultValueAttribute</span></span>                |
|<span data-ttu-id="afcee-217">pslistmodifier</span><span class="sxs-lookup"><span data-stu-id="afcee-217">pslistmodifier</span></span>               | <span data-ttu-id="afcee-218">System. Management. Automation. PSListModifier</span><span class="sxs-lookup"><span data-stu-id="afcee-218">System.Management.Automation.PSListModifier</span></span>                         |
|<span data-ttu-id="afcee-219">psmoduleinfo</span><span class="sxs-lookup"><span data-stu-id="afcee-219">psmoduleinfo</span></span>                 | <span data-ttu-id="afcee-220">System. Management. Automation. PSModuleInfo</span><span class="sxs-lookup"><span data-stu-id="afcee-220">System.Management.Automation.PSModuleInfo</span></span>                           |
|<span data-ttu-id="afcee-221">psnoteproperty</span><span class="sxs-lookup"><span data-stu-id="afcee-221">psnoteproperty</span></span>               | <span data-ttu-id="afcee-222">System. Management. Automation. PSNoteProperty</span><span class="sxs-lookup"><span data-stu-id="afcee-222">System.Management.Automation.PSNoteProperty</span></span>                         |
|<span data-ttu-id="afcee-223">psobject</span><span class="sxs-lookup"><span data-stu-id="afcee-223">psobject</span></span>                     | <span data-ttu-id="afcee-224">System. Management. Automation. PSObject</span><span class="sxs-lookup"><span data-stu-id="afcee-224">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="afcee-225">psprimitivedictionary</span><span class="sxs-lookup"><span data-stu-id="afcee-225">psprimitivedictionary</span></span>        | <span data-ttu-id="afcee-226">System. Management. Automation. PSPrimitiveDictionary</span><span class="sxs-lookup"><span data-stu-id="afcee-226">System.Management.Automation.PSPrimitiveDictionary</span></span>                  |
|<span data-ttu-id="afcee-227">pspropertyexpression</span><span class="sxs-lookup"><span data-stu-id="afcee-227">pspropertyexpression</span></span>         | <span data-ttu-id="afcee-228">Micro soft. Power shell. commands. PSPropertyExpression</span><span class="sxs-lookup"><span data-stu-id="afcee-228">Microsoft.PowerShell.Commands.PSPropertyExpression</span></span>                  |
|<span data-ttu-id="afcee-229">psscriptmethod</span><span class="sxs-lookup"><span data-stu-id="afcee-229">psscriptmethod</span></span>               | <span data-ttu-id="afcee-230">System. Management. Automation. PSScriptMethod</span><span class="sxs-lookup"><span data-stu-id="afcee-230">System.Management.Automation.PSScriptMethod</span></span>                         |
|<span data-ttu-id="afcee-231">psscriptproperty</span><span class="sxs-lookup"><span data-stu-id="afcee-231">psscriptproperty</span></span>             | <span data-ttu-id="afcee-232">System. Management. Automation. PSScriptProperty</span><span class="sxs-lookup"><span data-stu-id="afcee-232">System.Management.Automation.PSScriptProperty</span></span>                       |
|<span data-ttu-id="afcee-233">PSTypeNameAttribute</span><span class="sxs-lookup"><span data-stu-id="afcee-233">PSTypeNameAttribute</span></span>          | <span data-ttu-id="afcee-234">System. Management. Automation. PSTypeNameAttribute</span><span class="sxs-lookup"><span data-stu-id="afcee-234">System.Management.Automation.PSTypeNameAttribute</span></span>                    |
|<span data-ttu-id="afcee-235">psvariable</span><span class="sxs-lookup"><span data-stu-id="afcee-235">psvariable</span></span>                   | <span data-ttu-id="afcee-236">System. Management. Automation. PSVariable</span><span class="sxs-lookup"><span data-stu-id="afcee-236">System.Management.Automation.PSVariable</span></span>                             |
|<span data-ttu-id="afcee-237">psvariableproperty</span><span class="sxs-lookup"><span data-stu-id="afcee-237">psvariableproperty</span></span>           | <span data-ttu-id="afcee-238">System. Management. Automation. PSVariableProperty</span><span class="sxs-lookup"><span data-stu-id="afcee-238">System.Management.Automation.PSVariableProperty</span></span>                     |
|<span data-ttu-id="afcee-239">verwijzing</span><span class="sxs-lookup"><span data-stu-id="afcee-239">ref</span></span>                          | <span data-ttu-id="afcee-240">System. Management. Automation. PSReference</span><span class="sxs-lookup"><span data-stu-id="afcee-240">System.Management.Automation.PSReference</span></span>                            |
|<span data-ttu-id="afcee-241">reguliere</span><span class="sxs-lookup"><span data-stu-id="afcee-241">regex</span></span>                        | <span data-ttu-id="afcee-242">System. Text. RegularExpressions. regex</span><span class="sxs-lookup"><span data-stu-id="afcee-242">System.Text.RegularExpressions.Regex</span></span>                                |
|<span data-ttu-id="afcee-243">runs</span><span class="sxs-lookup"><span data-stu-id="afcee-243">runspace</span></span>                     | <span data-ttu-id="afcee-244">System. Management. Automation. Runspaces. runs Pace</span><span class="sxs-lookup"><span data-stu-id="afcee-244">System.Management.Automation.Runspaces.Runspace</span></span>                     |
|<span data-ttu-id="afcee-245">runspacefactory</span><span class="sxs-lookup"><span data-stu-id="afcee-245">runspacefactory</span></span>              | <span data-ttu-id="afcee-246">System. Management. Automation. Runspaces. RunspaceFactory</span><span class="sxs-lookup"><span data-stu-id="afcee-246">System.Management.Automation.Runspaces.RunspaceFactory</span></span>              |
|<span data-ttu-id="afcee-247">sbyte</span><span class="sxs-lookup"><span data-stu-id="afcee-247">sbyte</span></span>                        | <span data-ttu-id="afcee-248">Systeem. SByte</span><span class="sxs-lookup"><span data-stu-id="afcee-248">System.SByte</span></span>                                                        |
|<span data-ttu-id="afcee-249">script Block</span><span class="sxs-lookup"><span data-stu-id="afcee-249">scriptblock</span></span>                  | <span data-ttu-id="afcee-250">System. Management. Automation. script Block</span><span class="sxs-lookup"><span data-stu-id="afcee-250">System.Management.Automation.ScriptBlock</span></span>                            |
|<span data-ttu-id="afcee-251">securestring</span><span class="sxs-lookup"><span data-stu-id="afcee-251">securestring</span></span>                 | <span data-ttu-id="afcee-252">System. Security. SecureString</span><span class="sxs-lookup"><span data-stu-id="afcee-252">System.Security.SecureString</span></span>                                        |
|<span data-ttu-id="afcee-253">semver</span><span class="sxs-lookup"><span data-stu-id="afcee-253">semver</span></span>                       | <span data-ttu-id="afcee-254">System. Management. Automation. SemanticVersion</span><span class="sxs-lookup"><span data-stu-id="afcee-254">System.Management.Automation.SemanticVersion</span></span>                        |
|<span data-ttu-id="afcee-255">korte</span><span class="sxs-lookup"><span data-stu-id="afcee-255">short</span></span>                        | <span data-ttu-id="afcee-256">System. Int16</span><span class="sxs-lookup"><span data-stu-id="afcee-256">System.Int16</span></span>                                                        |
|<span data-ttu-id="afcee-257">afzonderlijke</span><span class="sxs-lookup"><span data-stu-id="afcee-257">single</span></span>                       | <span data-ttu-id="afcee-258">System. single</span><span class="sxs-lookup"><span data-stu-id="afcee-258">System.Single</span></span>                                                       |
|<span data-ttu-id="afcee-259">tekenreeks</span><span class="sxs-lookup"><span data-stu-id="afcee-259">string</span></span>                       | <span data-ttu-id="afcee-260">System. String</span><span class="sxs-lookup"><span data-stu-id="afcee-260">System.String</span></span>                                                       |
|<span data-ttu-id="afcee-261">SupportsWildcards</span><span class="sxs-lookup"><span data-stu-id="afcee-261">SupportsWildcards</span></span>            | <span data-ttu-id="afcee-262">System. Management. Automation. SupportsWildcardsAttribute</span><span class="sxs-lookup"><span data-stu-id="afcee-262">System.Management.Automation.SupportsWildcardsAttribute</span></span>             |
|<span data-ttu-id="afcee-263">schakelen</span><span class="sxs-lookup"><span data-stu-id="afcee-263">switch</span></span>                       | <span data-ttu-id="afcee-264">System. Management. Automation. SwitchParameter</span><span class="sxs-lookup"><span data-stu-id="afcee-264">System.Management.Automation.SwitchParameter</span></span>                        |
|<span data-ttu-id="afcee-265">tijdsbestek</span><span class="sxs-lookup"><span data-stu-id="afcee-265">timespan</span></span>                     | <span data-ttu-id="afcee-266">System. time span</span><span class="sxs-lookup"><span data-stu-id="afcee-266">System.TimeSpan</span></span>                                                     |
|<span data-ttu-id="afcee-267">type</span><span class="sxs-lookup"><span data-stu-id="afcee-267">type</span></span>                         | <span data-ttu-id="afcee-268">System. type</span><span class="sxs-lookup"><span data-stu-id="afcee-268">System.Type</span></span>                                                         |
|<span data-ttu-id="afcee-269">uint</span><span class="sxs-lookup"><span data-stu-id="afcee-269">uint</span></span>                         | <span data-ttu-id="afcee-270">System. UInt32</span><span class="sxs-lookup"><span data-stu-id="afcee-270">System.UInt32</span></span>                                                       |
|<span data-ttu-id="afcee-271">uint16</span><span class="sxs-lookup"><span data-stu-id="afcee-271">uint16</span></span>                       | <span data-ttu-id="afcee-272">System. UInt16</span><span class="sxs-lookup"><span data-stu-id="afcee-272">System.UInt16</span></span>                                                       |
|<span data-ttu-id="afcee-273">uint32</span><span class="sxs-lookup"><span data-stu-id="afcee-273">uint32</span></span>                       | <span data-ttu-id="afcee-274">System. UInt32</span><span class="sxs-lookup"><span data-stu-id="afcee-274">System.UInt32</span></span>                                                       |
|<span data-ttu-id="afcee-275">uint64</span><span class="sxs-lookup"><span data-stu-id="afcee-275">uint64</span></span>                       | <span data-ttu-id="afcee-276">System. UInt64</span><span class="sxs-lookup"><span data-stu-id="afcee-276">System.UInt64</span></span>                                                       |
|<span data-ttu-id="afcee-277">ULONG</span><span class="sxs-lookup"><span data-stu-id="afcee-277">ulong</span></span>                        | <span data-ttu-id="afcee-278">System. UInt64</span><span class="sxs-lookup"><span data-stu-id="afcee-278">System.UInt64</span></span>                                                       |
|<span data-ttu-id="afcee-279">URI</span><span class="sxs-lookup"><span data-stu-id="afcee-279">uri</span></span>                          | <span data-ttu-id="afcee-280">System. URI</span><span class="sxs-lookup"><span data-stu-id="afcee-280">System.Uri</span></span>                                                          |
|<span data-ttu-id="afcee-281">USHORT</span><span class="sxs-lookup"><span data-stu-id="afcee-281">ushort</span></span>                       | <span data-ttu-id="afcee-282">System. UInt16</span><span class="sxs-lookup"><span data-stu-id="afcee-282">System.UInt16</span></span>                                                       |
|<span data-ttu-id="afcee-283">ValidateCount</span><span class="sxs-lookup"><span data-stu-id="afcee-283">ValidateCount</span></span>                | <span data-ttu-id="afcee-284">System. Management. Automation. ValidateCountAttribute</span><span class="sxs-lookup"><span data-stu-id="afcee-284">System.Management.Automation.ValidateCountAttribute</span></span>                 |
|<span data-ttu-id="afcee-285">ValidateDrive</span><span class="sxs-lookup"><span data-stu-id="afcee-285">ValidateDrive</span></span>                | <span data-ttu-id="afcee-286">System. Management. Automation. ValidateDriveAttribute</span><span class="sxs-lookup"><span data-stu-id="afcee-286">System.Management.Automation.ValidateDriveAttribute</span></span>                 |
|<span data-ttu-id="afcee-287">ValidateLength</span><span class="sxs-lookup"><span data-stu-id="afcee-287">ValidateLength</span></span>               | <span data-ttu-id="afcee-288">System. Management. Automation. ValidateLengthAttribute</span><span class="sxs-lookup"><span data-stu-id="afcee-288">System.Management.Automation.ValidateLengthAttribute</span></span>                |
|<span data-ttu-id="afcee-289">ValidateNotNull</span><span class="sxs-lookup"><span data-stu-id="afcee-289">ValidateNotNull</span></span>              | <span data-ttu-id="afcee-290">System. Management. Automation. ValidateNotNullAttribute</span><span class="sxs-lookup"><span data-stu-id="afcee-290">System.Management.Automation.ValidateNotNullAttribute</span></span>               |
|<span data-ttu-id="afcee-291">ValidateNotNullOrEmpty</span><span class="sxs-lookup"><span data-stu-id="afcee-291">ValidateNotNullOrEmpty</span></span>       | <span data-ttu-id="afcee-292">System. Management. Automation. ValidateNotNullOrEmptyAttribute</span><span class="sxs-lookup"><span data-stu-id="afcee-292">System.Management.Automation.ValidateNotNullOrEmptyAttribute</span></span>        |
|<span data-ttu-id="afcee-293">ValidatePattern</span><span class="sxs-lookup"><span data-stu-id="afcee-293">ValidatePattern</span></span>              | <span data-ttu-id="afcee-294">System. Management. Automation. ValidatePatternAttribute</span><span class="sxs-lookup"><span data-stu-id="afcee-294">System.Management.Automation.ValidatePatternAttribute</span></span>               |
|<span data-ttu-id="afcee-295">ValidateRange</span><span class="sxs-lookup"><span data-stu-id="afcee-295">ValidateRange</span></span>                | <span data-ttu-id="afcee-296">System. Management. Automation. ValidateRangeAttribute</span><span class="sxs-lookup"><span data-stu-id="afcee-296">System.Management.Automation.ValidateRangeAttribute</span></span>                 |
|<span data-ttu-id="afcee-297">ValidateScript</span><span class="sxs-lookup"><span data-stu-id="afcee-297">ValidateScript</span></span>               | <span data-ttu-id="afcee-298">System. Management. Automation. ValidateScriptAttribute</span><span class="sxs-lookup"><span data-stu-id="afcee-298">System.Management.Automation.ValidateScriptAttribute</span></span>                |
|<span data-ttu-id="afcee-299">Validatieset</span><span class="sxs-lookup"><span data-stu-id="afcee-299">ValidateSet</span></span>                  | <span data-ttu-id="afcee-300">System. Management. Automation. ValidateSetAttribute</span><span class="sxs-lookup"><span data-stu-id="afcee-300">System.Management.Automation.ValidateSetAttribute</span></span>                   |
|<span data-ttu-id="afcee-301">ValidateTrustedData</span><span class="sxs-lookup"><span data-stu-id="afcee-301">ValidateTrustedData</span></span>          | <span data-ttu-id="afcee-302">System. Management. Automation. ValidateTrustedDataAttribute</span><span class="sxs-lookup"><span data-stu-id="afcee-302">System.Management.Automation.ValidateTrustedDataAttribute</span></span>           |
|<span data-ttu-id="afcee-303">ValidateUserDrive</span><span class="sxs-lookup"><span data-stu-id="afcee-303">ValidateUserDrive</span></span>            | <span data-ttu-id="afcee-304">System. Management. Automation. ValidateUserDriveAttribute</span><span class="sxs-lookup"><span data-stu-id="afcee-304">System.Management.Automation.ValidateUserDriveAttribute</span></span>             |
|<span data-ttu-id="afcee-305">versie</span><span class="sxs-lookup"><span data-stu-id="afcee-305">version</span></span>                      | <span data-ttu-id="afcee-306">Systeem. versie</span><span class="sxs-lookup"><span data-stu-id="afcee-306">System.Version</span></span>                                                      |
|<span data-ttu-id="afcee-307">ongeldige</span><span class="sxs-lookup"><span data-stu-id="afcee-307">void</span></span>                         | <span data-ttu-id="afcee-308">System. void</span><span class="sxs-lookup"><span data-stu-id="afcee-308">System.Void</span></span>                                                         |
|<span data-ttu-id="afcee-309">WildcardPattern</span><span class="sxs-lookup"><span data-stu-id="afcee-309">WildcardPattern</span></span>              | <span data-ttu-id="afcee-310">System. Management. Automation. WildcardPattern</span><span class="sxs-lookup"><span data-stu-id="afcee-310">System.Management.Automation.WildcardPattern</span></span>                        |
|<span data-ttu-id="afcee-311">WMI</span><span class="sxs-lookup"><span data-stu-id="afcee-311">wmi</span></span>                          | <span data-ttu-id="afcee-312">System. Management. ManagementObject</span><span class="sxs-lookup"><span data-stu-id="afcee-312">System.Management.ManagementObject</span></span>                                  |
|<span data-ttu-id="afcee-313">wmiclass</span><span class="sxs-lookup"><span data-stu-id="afcee-313">wmiclass</span></span>                     | <span data-ttu-id="afcee-314">System. Management. ManagementClass</span><span class="sxs-lookup"><span data-stu-id="afcee-314">System.Management.ManagementClass</span></span>                                   |
|<span data-ttu-id="afcee-315">wmisearcher</span><span class="sxs-lookup"><span data-stu-id="afcee-315">wmisearcher</span></span>                  | <span data-ttu-id="afcee-316">System. Management. ManagementObjectSearcher</span><span class="sxs-lookup"><span data-stu-id="afcee-316">System.Management.ManagementObjectSearcher</span></span>                          |
|<span data-ttu-id="afcee-317">X500DistinguishedName</span><span class="sxs-lookup"><span data-stu-id="afcee-317">X500DistinguishedName</span></span>        | <span data-ttu-id="afcee-318">System. Security. Cryptography. X509Certificates. X500DistinguishedName</span><span class="sxs-lookup"><span data-stu-id="afcee-318">System.Security.Cryptography.X509Certificates.X500DistinguishedName</span></span> |
|<span data-ttu-id="afcee-319">X509Certificate</span><span class="sxs-lookup"><span data-stu-id="afcee-319">X509Certificate</span></span>              | <span data-ttu-id="afcee-320">System. Security. Cryptography. X509Certificates. X509Certificate</span><span class="sxs-lookup"><span data-stu-id="afcee-320">System.Security.Cryptography.X509Certificates.X509Certificate</span></span>       |
|<span data-ttu-id="afcee-321">xml</span><span class="sxs-lookup"><span data-stu-id="afcee-321">xml</span></span>                          | <span data-ttu-id="afcee-322">System.Xml.Xmldocument</span><span class="sxs-lookup"><span data-stu-id="afcee-322">System.Xml.XmlDocument</span></span>                                              |
